Make a few fixes after testing on server I made just a few fixes, there was the right column showing, which i kind of like, but we have no forethought into that, so i'm just removing it for now. also, i had previously updated the wrong file. I need to remove extrainious files that are not in use, because (especially in the checkout and account section) there are a lot of duplicates due to the odd routing, and me just covering all my bases. But now it's getting annoying, not a huge deal, but it would just be nice to clean up. Update README with commit.
Former-commit-id: 7d568f00204169e8e26c1e18870ae19a679953db

--- a/skin/frontend/default/rofcustom/css/cart-checkout.css
+++ b/skin/frontend/default/rofcustom/css/cart-checkout.css
@@ -909,8 +909,8 @@ img, button, input {
         }
 
 
-/* One Page Checkout Review Section
-******************************************************/
+        /* One Page Checkout Review Section
+        ******************************************************/
         .opc-wrapper-opc #checkout-review-table .a-right,
         .opc-wrapper-opc #checkout-review-table .a-center,
         .opc-wrapper-opc #checkout-review-table .a-left {
@@ -958,6 +958,11 @@ img, button, input {
             margin-right: 10px;
             margin-left: 10px;
             padding-top: 10px;
+        }
+
+        .opc-wrapper-opc .review-after #iframe-warning {
+            height: 0px !important;
+            text-indent: -10000px;
         }
 
             /* Product Color Swatch Values (For Use as Border Color around Product Image) **************
